cloudinary: - add cloudinarydotnet package - add cloudinary settings in appsettings - add CloudinarySettings class - configure CloudinarySettings service

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dndz6ubdj",
+    "ApiKey": "979563595945847",
+    "ApiSecret": "Ej-HbSjwL1tWds3sgEvVBjslGco"
+  }
 }
